refactoring with golangci-lint & swagger corrections
